--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         {% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
 </body>
 
 </html>
